objects/OSM_Account_Permission_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OSM Account Permission Matrices</relationshipLabel>
        <relationshipName>OSM_Account_Permission_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacts_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if you see contacts in the effective account modal</description>
        <label>Contacts Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_invoice_bill_to_HQ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PO invoice bill to HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_to_Branch__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This determines whether we send emails child branches</description>
        <label>Send Email to Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_price_for_branch_accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this determines if we have price showing for the branches.</description>
        <label>Show price for branch accounts</label>
        <type>Checkbox</type>
    </fields>
    <label>OSM Account Permission Matrix</label>
    <nameField>
        <label>OSM Account Permission Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSM Account Permission Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>